--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
       <ol class="output"></ol>
     </div>
   </div>
-  <script src="apps.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
